flask-server-deploy/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: flask-server
  namespace: flask-backend
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
  selector:
    name: flask-server
