flask-server-deploy/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: flask-server
  namespace: flask-backend
spec:
  to:
    kind: Service
    name: flask-server
    weight: 100
  port:
    targetPort: 8080
  wildcardPolicy: None
